# gimp-mcp

./: .cursorrules  .gitignore  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DXT_BUILD_FIX.md  DXT_PACKAGING_FIX.md  DXT_README.md  Dockerfile  GIMP_MCP_TOOLS_REGISTRATION_FIX_GUIDE.md  INSTALL.md  README.md  SPEC.md  build.ps1  build_dxt.py  build_mcpb.py  config.yaml  debug_test.py  docker-compose.yml  extension.toml  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  mcp_dir.txt  mcpb.json  pyproject.toml  requirements.txt  start.ps1  test_ai_generation.py  test_call.py  test_client.py  test_fix.py  test_import.py  test_tool_registration.py
.github/workflows/: build-dxt.yml  ci.yml  docker-publish.yml  mcpb-release.yml
assets/prompts/: examples.json  system.md  user.md
docs/: AI_IMAGE_GENERATION_PLAN.md  AI_PROMPT_TEMPLATE.md  ARCHITECTURE.md  CLAUDE-CODE-WORKTREES.md  COMPETITIVE_ANALYSIS.md  COMPLETE_DOCUMENTATION_STRUCTURE.md  DEVELOPMENT_STATUS_REPORT.md  DOCKER.md  DOCUMENTATION_INDEX.md  DXT_PACKAGING_SUMMARY.md  EMERGENCY_REWRITE_PLAN.md  EXAMPLES.md  FASTMCP_CLOUD_DEPLOYMENT.md  FLEET_PIPELINE.md  GIMP_ASSESSMENT.md  IMPLEMENTATION_ROADMAP.md  LLMs.txt Standard.md  MCP_PRODUCTION_CHECKLIST.md  MONITORING.md  NEW_TOOLS_README.md  ROADMAP.md  SIM_ART_PIPELINE.md  TOOL_REGISTRATION_FIX_CORRECTED.md  WINDSURF_COMPLETION_PLAN.md  WINDSURF_IMPLEMENTATION_PLAN.md  installation.md
docs/blender/: ASSET_REPOSITORIES.md  BLENDERKIT_GUIDE.md  BLENDER_MCP_FUNCTIONALITY_PLAN.md  BLENDER_MCP_FUNCTIONALITY_PLAN_NEW.md  FREE_ASSETS_GUIDE.md  GUI_MODE.md  README.md  TOOL_REFERENCE.md
docs/development/: BULLETPROOF_MCP_GUIDE.md  FILE_VALIDATION_COMPLETE.md  FILE_VALIDATION_GUIDE.md  LOGURU_LOGGING_GUIDE.md  PYTHON_DEPENDENCY_HELL_FIX.md  README.md  SYNC_HEALTH_IMPROVEMENTS_SUMMARY.md  SYNC_HEALTH_INTEGRATION.md
docs/docsviewer/: README.md  configuration.md  download_tools.md  index.md  log_tools.md  mkdocs.yml  quickstart.md  serve_docs.ps1  serve_docs.sh
docs/glama/: README.md
docs/readme/: ARCHITECTURE.md  CLI_API.md  GIMP_INTEGRATION.md  GIMP_PLUGINS.md  INSTALL.md
docs/serena/: SERENA_NEXT_STEPS.md
dxt/: README.md  manifest.json  requirements.txt
dxt/src/gimp_mcp/: config.py  main.py  server.py
dxt/src/gimp_mcp/plugins/: __init__.py  base_plugin.py  layer_plugin.py
dxt/src/gimp_mcp/tools/: __init__.py  base.py  batch_processing.py  color_adjustments.py  file_operations.py  (+4 more)
mcpb/: manifest.json
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail.yml
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/src/: backend.rs
native/windows/: hooks.nsh
scripts/: cua-nsis-config.json  cua-smoke.py  fleet_e2e_smoke.py  fleet_pipeline.py  list_tools.py  pdb_call.py  run-fleet-pipeline.ps1  run-sim-art-pipeline.ps1  run_tests.ps1  sim_art_pipeline.py  smoke_test.py  test_cli.py  test_pdb.py
skills/gimp-expert/: SKILL.md
src/: lib.rs  test_import.py
src/gimp_mcp/: __init__.py  agentic.py  ai_image.py  bridge_wrapper.py  cli_wrapper.py  config.py  gimp_detector.py  http_app.py  interaction_manager.py  local_llm.py  logging_config.py  main.py  mcp_server.py  prompts.py  resources.py  server.py  sota_registration.py  tool_utils.py  transport.py
src/gimp_mcp/models/: schemas.py
src/gimp_mcp/plugins/: __init__.py  base_plugin.py  layer_plugin.py
src/gimp_mcp/tools/: __init__.py  agent_lab_registration.py  analysis.py  animation.py  base.py  batch.py  batch_processing.py  bridge_tools.py  brightness_contrast.py  channel.py  color.py  color_adjustments.py  color_mgmt.py  file_operations.py  file_operations.py.bak  file_operations_fixed.py  file_operations_new.py  file_operations_tools.py  file_operations_tools_fixed.py  filter.py  filters.py  gegl.py  gmic.py  help_tools.py  import_tools.py  layer.py  parasites.py  paths.py  pdb_proxy.py  sim_art_tools.py  system.py  transform.py  transforms.py  validation.py  vision_refine_tools.py  workspace.py
src/gimp_mcp/tools_legacy/: __init__.py  base.py  batch_processing.py  brightness_contrast.py  color_adjustments.py  color_adjustments_final_fix.py  color_adjustments_fixed.py  file_operations.py  file_operations_base.py  file_operations_tools.py  file_operations_tools_fixed.py  filters.py  filters_fixed.py  help_tools.py  image_analysis.py  layer_management.py  performance_tools.py  status_tools.py  transforms.py  transforms_fixed.py
src/gimp_mcp/utils/: ai_mesh_handoff.py  execution_mode.py  fleet_e2e_offline.py  fleet_handoff.py  fleet_http.py  fleet_import.py  fleet_pipeline.py  fleet_sim_handoff.py  fleet_sim_pipeline.py  gimp_runtime.py  pbr_presets.py  sim_art_templates.py  structured_logging.py  telemetry.py
tests/: conftest.py  debug_test.py  test_api.py  test_bridge_wrapper.py  test_fastmcp.py  test_fleet_sim_handoff.py  test_interaction_manager.py  test_new_tools.py  test_phase1_tools.py  test_phase2_tools.py  test_phase3_tools.py  test_phase4_tools.py  test_phase5_tools.py  test_phase6_tools.py  test_tools.py
webapp/: start.bat  start.ps1
webapp/backend/: start_server.py  test_ai_generation.py  test_fastmcp.py
webapp/backend/tests/: debug_test.py  simple_test.py  test_basic.py  test_call.py  test_client.py  test_fastmcp.py  test_fix.py  test_import.py  test_new_tools.py  test_portmanteau.py  test_tool_decorator.py  test_tools.py
webapp/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
webapp/frontend/e2e/: smoke.spec.ts
webapp/frontend/src/: App.tsx  index.css  store.ts
(+26 files in other folders)
